# peax

./: .gitignore  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: about.md  index.md
docs/code/: summary.md
docs/code/analysis/: arch_analysis.md  compute_analysis.md  index.md  mem_analysis.md  model_analysis.md  optimization_queue.md  storage_analysis.md
docs/code/reports/: accuracy.md  base.md  batch_size.md  dataset.md  early_exit.md  histogram.md  hw_check.md  index.md  temporal.md
docs/code/rewriters/: index.md
docs/usage/: index.md
peax/: analysis.py
peax/compilers/: compile_backend.py  onnxruntime.py  tflite.py
peax/components/: architecture.py  graph_tools.py  predictive.py  resource.py  tflm_support.py  visualize_graph.py
peax/hardware/: connection.py  power_domain.py  processor.py
peax/reports/: accuracy.py  base.py  batch_size.py  dataset.py  early_exit.py  histograms.py  hw_checker.py  temporal.py
peax/rewriters/: base.py  heterogeneous_platforms.py  histogram_termination.py  right_sizing.py  smart_convolutions.py  temporal_early_exit.py
peax/rewriters/compiler/: micro_tvm.py  rewriter.py  tflite.py
peax/rewriters/slim/: __init__.py  layers.py  rewriter.py  weight_handling.py
peax/templates/: accuracy_report.html  analysis.html  base.html  dataset_report.html  early_exit_report.html  hetero_rewriter.html  histogram_report.html  histogram_rewriter.html  hw_check_report.html  microTVM_compiler.html  report.html  right_sizing_rewriter.html  slim_rewriter.html  smart_conv_rewriter.html  temporal_decision_report.html  temporal_exiting_rewriter.html  tflite_compiler.html
peax/templates/styling/: style.css
peax/utils/: keras_graph.py  normal_distribution.py  optimization.py
(+11 files in other folders)
