[project]
name = "peax"
version = "2024.10.22"
description = "A Python-based post-training augmentation framework to convert neural networks into adaptive models."
authors = ["Sponner Max<Max.Sponner@outlook.com>"]

[tool.poetry]
name = "peax"
version = "2024.10.22"
description = "A Python-based post-training augmentation framework to convert neural networks into adaptive models."
authors = ["Sponner Max<Max.Sponner@outlook.com>"]
readme = "README.md"
include = [
  "peax/templates/*.html",
  "peax/templates/styling/*.css",
  "peax/templates/styling/*.woff",
  "peax/templates/styling/*.png",
  "peax/templates/styling/*.jpg"
]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
matplotlib = "^3.8.4"
Jinja2 = "^3.1.3"
matplot = "^0.1.9"
networkx = "^3.0"
pillow = "^10.3.0"
pydot = "^2.0.0"
pandas = "^2.2.2"
python-dateutil = "^2.9.0.post0"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
tensorflow-io-gcs-filesystem = { version = "0.27.0"}
tensorflow = "2.11"
apache-tvm = {version = "*", markers = "sys_platform == 'linux' or sys_platform == 'darwin'"}
tlcpack = { version = "^0.8.0", markers = "sys_platform == 'windows'"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.0"
pre-commit = "^3.7.0"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.3"}
pytest-cov = "^5.0.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[[tool.poetry.source]]
name = "tlcpack"
url = "https://tlcpack.ai/wheels"
priority = "primary"
